--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 JWT_KEY=Secretkeythisisllaith12345
-MONGODB_URL=mongodb://localhost:27017/ellipseDB
+MONGODB_URL=mongodb+srv://admin-Lalith:nani9999@cluster0-2vqtg.mongodb.net/ellipseDB
