--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Codebase for ellipse's server backend",
   "main": "app.js",
   "scripts": {
-    "start": "app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
