--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-JWT_KEY=Secretkeythisisllaith12345
+JWT_KEY=Thisisasecretkeyofabcdefgh
 MONGODB_URL=mongodb+srv://admin-Lalith:nani9999@cluster0-2vqtg.mongodb.net/ellipseDB
+SENDGRID_API_KEY=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
