--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "lalith",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.2.1",
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -23,6 +24,7 @@
     "mongoose": "^5.9.18",
     "mongoose-encryption": "^2.0.2",
     "nodemon": "^2.0.4",
+    "otp-generator": "^1.1.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
