--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.5.0",
     "gridfs-stream": "^1.1.1",
+    "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.2.1",
     "mongoose": "^5.9.18",
     "mongoose-encryption": "^2.0.2",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.4",
     "otp-generator": "^1.1.0",
     "passport": "^0.4.1",
@@ -31,7 +33,9 @@
     "passport-local-mongoose": "^6.0.1",
     "redis": "^3.0.2",
     "redis-connection": "^5.4.0",
+    "sharp": "^0.25.4",
     "shortid": "^2.2.15",
+    "socket.io": "^2.3.0",
     "validator": "^13.1.0"
   }
 }
