--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-busboy": "0.0.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.7-alpha.4",
     "express-session": "^1.17.1",
     "express-validator": "^6.5.0",
     "gridfs-stream": "^1.1.1",
