some bugs fixed registrations added and profile images added to gridfs

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 JWT_KEY=Thisisasecretkeyofabcdefgh
-MONGODB_URL=mongodb://139.59.16.53:27017/ellipseDB
+MONGODB_URL=mongodb://admin-lalith:appEllipse2020App@139.59.16.53:27017/ellipseDB
 SENDGRID_API_KEY=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
