--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "sharp": "^0.25.4",
     "shortid": "^2.2.15",
     "socket.io": "^2.3.0",
-    "validator": "^13.1.0"
+    "validator": "^13.1.0",
+    "ws": "^7.3.1"
   }
 }
