all variables in model fixed and routes for registration and announcement added

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 JWT_KEY=Thisisasecretkeyofabcdefgh
-MONGODB_URL=mongodb://admin-lalith:appEllipse2020App@139.59.16.53:27017/ellipseDB
+MONGODB_URL=mongodb+srv://admin-Lalith:nani9999@cluster0-2vqtg.mongodb.net/ellipseDB
 SENDGRID_API_KEY=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
