--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.5.0",
     "gridfs-stream": "^1.1.1",
+    "html-pdf": "^2.2.0",
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.2.1",
