--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^5.9.18",
     "mongoose-encryption": "^2.0.2",
     "multer": "^1.4.2",
+    "node-cron": "^2.0.3",
     "nodemon": "^2.0.4",
     "otp-generator": "^1.1.0",
     "passport": "^0.4.1",
