announcement delete route added

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 JWT_KEY=Thisisasecretkeyofabcdefgh
-MONGODB_URL=mongodb://EllipseApp:EllipseApp2020@localhost:27017/ellipseDB
-MONGODB_ADMIN_URL=mongodb://EllipseApp:EllipseApp2020@localhost:27017/ellipseDB
+MONGODB_URL=mongodb://admin-lalith:appEllipse2020App@139.59.16.53:27017/ellipseDB
+MONGODB_ADMIN_URL=mongodb://lalith:appEllipse2020App@139.59.16.53:27017/ellipseDB
 SENDGRID_API_KEY=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
