--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "node-cron": "^2.0.3",
     "nodemon": "^2.0.4",
     "otp-generator": "^1.1.0",
+    "randomstring": "^1.1.5",
     "redis": "^3.0.2",
     "redis-connection": "^5.4.0",
     "validator": "^13.1.0",
     "ws": "^7.3.1"
   }
 }
-
