--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "randomstring": "^1.1.5",
     "redis": "^3.0.2",
     "redis-connection": "^5.4.0",
+    "socket.io": "^3.0.3",
     "validator": "^13.1.0",
     "ws": "^7.3.1"
   }
