--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-fileupload": "^1.1.7-alpha.4",
     "express-session": "^1.17.1",
     "express-validator": "^6.5.0",
+    "firebase-admin": "^9.4.2",
     "gridfs-stream": "^1.1.1",
     "html-pdf": "^2.2.0",
     "http": "0.0.1-security",
